# goit-pythonweb-hw-10

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.MD  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: errors.py  main.py  schemas.py
app/api/: authentication.py  contacts.py  users.py
app/conf/: config.py
app/database/: db.py
app/repository/: contacts.py  models.py  users.py
app/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
app/templates/: verify_email.html
migrations/: env.py
migrations/versions/: 2535e8839c4b_add_confirmed_to_user.py  3cd448a1d2d1_init.py  48f7cccfa7e5_add_user.py
